--- a/credit-ms/src/main/resources/application.yml
+++ b/credit-ms/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: credit-ms
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   port: 0
 
@@ -11,3 +17,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+mq:
+  queues:
+    card-issuance: card-issuance
+  exchanges:
+    fanout: amqp.fanout
