--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
               lower-case-service-id: true
               enabled: true
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/cloudrealm
+
 server:
   port: 8080
 
