--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -23,4 +23,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${ADMIN_USERNAME:adm}:${ADMIN_PASSWORD:adm}@localhost:8761/eureka
