--- a/eurekaserver/Dockerfile
+++ b/eurekaserver/Dockerfile
@@ -1,5 +1,11 @@
+FROM maven:3.9.11-eclipse-temurin-21 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
 FROM eclipse-temurin:21-jdk
 WORKDIR /app
-COPY target/eurekaserver-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8761
 ENTRYPOINT ["java", "-jar", "app.jar"]
