--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
 
   security:
     user:
-      name: ${ADMIN_USERNAME:adm}
-      password: ${ADMIN_PASSWORD:adm}
+      name: ${ADMIN_USERNAME}
+      password: ${ADMIN_PASSWORD}
 
 server:
   port: 8761
