--- a/card-ms/src/main/resources/application-prod.yml
+++ b/card-ms/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: credit-ms
+    name: card-ms
 
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_HOST}
     port: 5672
     username: guest
     password: guest
@@ -14,12 +14,10 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://adm:adm@localhost:8761/eureka/
+      defaultZone: http://${ADMIN_USERNAME}:${ADMIN_PASSWORD}@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 mq:
   queues:
     card-issuance: card-issuance
-  exchanges:
-    fanout: amqp.fanout
