--- a/card-ms/src/main/resources/application.yml
+++ b/card-ms/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: card-ms
 
   rabbitmq:
-    host: ${RABBITMQ_HOST}
+    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -14,7 +14,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://${ADMIN_USERNAME}:${ADMIN_PASSWORD}@${EUREKA_SERVER}:8761/eureka
+      defaultZone: http://adm:adm@localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
