--- a/client-ms/Dockerfile
+++ b/client-ms/Dockerfile
@@ -12,4 +12,4 @@ ARG EUREKA_SERVER=eureka
 ARG ADMIN_USERNAME=adm
 ARG ADMIN_PASSWORD=adm
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
