--- a/client-ms/src/main/resources/application-prod.yml
+++ b/client-ms/src/main/resources/application-prod.yml
@@ -8,6 +8,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://adm:adm@localhost:8761/eureka/
+      defaultZone: http://${ADMIN_USERNAME}:${ADMIN_PASSWORD}@${EUREKA_SERVER}:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
