--- a/credit-ms/src/main/resources/application-prod.yml
+++ b/credit-ms/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     name: credit-ms
 
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_HOST}
     port: 5672
     username: guest
     password: guest
@@ -14,7 +14,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://adm:adm@localhost:8761/eureka/
+      defaultZone: http://${ADMIN_USERNAME}:${ADMIN_PASSWORD}@${EUREKA_SERVER}:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
